<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:background="@color/transparent"
        app:elevation="@dimen/detail_app_bar_elevation">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.gms.maps.MapView
                android:id="@+id/map_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/detail_map_height"
                app:cameraZoom="16"
                app:mapType="normal"
                app:liteMode="true"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginTop="@dimen/detail_toolbar_margin_top"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:navigationIcon="@drawable/ic_arrow_back_dark"
                app:navigationContentDescription="@string/detail_navigation_content_description"/>

        </FrameLayout>

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/text_view_code"
        android:layout_width="@dimen/item_image_dimen"
        android:layout_height="@dimen/item_image_dimen"
        android:layout_margin="@dimen/fab_margin"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="bottom|end"
        android:background="@drawable/code_background"
        android:gravity="center"
        tools:targetApi="lollipop"
        android:elevation="@dimen/fab_elevation"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/detail_scroll_view_margin_top"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/detail_tile_height">

                <ImageView
                    android:id="@+id/image_view_car"
                    android:layout_width="@dimen/detail_image_view_dimen"
                    android:layout_height="@dimen/detail_image_view_dimen"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/detail_image_view_margin_start"
                    android:layout_marginStart="@dimen/detail_image_view_margin_start"
                    app:srcCompat="@drawable/ic_car_small"
                    android:contentDescription="@string/car_content_description"
                    tools:ignore="MissingPrefix"/>

                <TextView
                    android:id="@+id/text_view_car"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_marginLeft="@dimen/detail_text_view_margin_start"
                    android:layout_marginStart="@dimen/detail_text_view_margin_start"
                    android:layout_marginRight="@dimen/detail_text_view_margin_end"
                    android:layout_marginEnd="@dimen/detail_text_view_margin_end"
                    android:layout_marginTop="@dimen/detail_text_view_margin_top"
                    android:maxLines="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Menu"/>

                <TextView
                    android:id="@+id/text_view_licence"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="@dimen/detail_text_view_margin_start"
                    android:layout_marginStart="@dimen/detail_text_view_margin_start"
                    android:layout_marginRight="@dimen/detail_text_view_margin_end"
                    android:layout_marginEnd="@dimen/detail_text_view_margin_end"
                    android:layout_marginBottom="@dimen/detail_text_view_margin_top"
                    android:maxLines="1"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider_height"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="@dimen/detail_text_view_margin_start"
                    android:layout_marginStart="@dimen/detail_text_view_margin_start"
                    android:background="@color/divider"/>

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/detail_tile_height">

                <ImageView
                    android:id="@+id/image_view_time"
                    android:layout_width="@dimen/detail_image_view_dimen"
                    android:layout_height="@dimen/detail_image_view_dimen"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/detail_image_view_margin_start"
                    android:layout_marginStart="@dimen/detail_image_view_margin_start"
                    app:srcCompat="@drawable/ic_clock"
                    android:contentDescription="@string/time_content_description"
                    tools:ignore="MissingPrefix"/>

                <TextView
                    android:id="@+id/text_view_hours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_marginLeft="@dimen/detail_text_view_margin_start"
                    android:layout_marginStart="@dimen/detail_text_view_margin_start"
                    android:layout_marginRight="@dimen/detail_text_view_margin_end"
                    android:layout_marginEnd="@dimen/detail_text_view_margin_end"
                    android:layout_marginTop="@dimen/detail_text_view_margin_top"
                    android:maxLines="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Menu"/>

                <TextView
                    android:id="@+id/text_view_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="@dimen/detail_text_view_margin_start"
                    android:layout_marginStart="@dimen/detail_text_view_margin_start"
                    android:layout_marginRight="@dimen/detail_text_view_margin_end"
                    android:layout_marginEnd="@dimen/detail_text_view_margin_end"
                    android:layout_marginBottom="@dimen/detail_text_view_margin_top"
                    android:maxLines="1"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider_height"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="@dimen/detail_text_view_margin_start"
                    android:layout_marginStart="@dimen/detail_text_view_margin_start"
                    android:background="@color/divider"/>

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/detail_tile_height">

                <ImageView
                    android:id="@+id/image_view_cost"
                    android:layout_width="@dimen/detail_image_view_dimen"
                    android:layout_height="@dimen/detail_image_view_dimen"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/detail_image_view_margin_start"
                    android:layout_marginStart="@dimen/detail_image_view_margin_start"
                    app:srcCompat="@drawable/ic_coin"
                    android:contentDescription="@string/cost_content_description"
                    tools:ignore="MissingPrefix"/>

                <TextView
                    android:id="@+id/text_view_cost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_marginLeft="@dimen/detail_text_view_margin_start"
                    android:layout_marginStart="@dimen/detail_text_view_margin_start"
                    android:layout_marginRight="@dimen/detail_text_view_margin_end"
                    android:layout_marginEnd="@dimen/detail_text_view_margin_end"
                    android:layout_marginTop="@dimen/detail_text_view_margin_top"
                    android:maxLines="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Menu"/>

                <TextView
                    android:id="@+id/text_view_cost_hour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="@dimen/detail_text_view_margin_start"
                    android:layout_marginStart="@dimen/detail_text_view_margin_start"
                    android:layout_marginRight="@dimen/detail_text_view_margin_end"
                    android:layout_marginEnd="@dimen/detail_text_view_margin_end"
                    android:layout_marginBottom="@dimen/detail_text_view_margin_top"
                    android:maxLines="1"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider_height"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="@dimen/detail_text_view_margin_start"
                    android:layout_marginStart="@dimen/detail_text_view_margin_start"
                    android:background="@color/divider"/>

            </FrameLayout>

        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>